# secondbrain

./: .env.production  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wdio.conf.ts
.github/workflows/: deploy.yml  web.yml  worker.yml
docs/: cloud-migration-plan.md  icloud-mail-plan.md
e2e/: noteImages.spec.ts
src/: App.tsx  db.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dev-capabilities/: localhost.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_default_lists.sql  003_people.sql  004_person_custom_fields.sql  005_fts_trigram.sql  006_note_images.sql  007_unique_list_name.sql
src-tauri/src/: lib.rs  mail.rs
src/@types/: i18next.d.ts
src/components/: Avatar.tsx  DictateButton.tsx  EventForm.tsx  ItemCard.tsx  ItemMeta.tsx  MarkdownToolbar.tsx  NoteImage.tsx  PhotoPicker.tsx  Turnstile.tsx  ViewGate.tsx  YouTubeEmbed.tsx  ui.tsx
src/components/assistant/: AssistantPopup.tsx  Composer.tsx  ConfirmDeleteCard.tsx  MessageList.tsx  useAssistantChat.ts
src/components/auth/: AuthGate.tsx
src/components/today/: BirthdaysWidget.tsx  CardBoundary.tsx  CardShell.tsx  DueWidget.tsx  NotesWidgets.tsx  RssWidget.tsx  ScheduleWidget.tsx  StocksWidget.tsx  SummaryWidget.tsx  WeatherWidget.tsx  dayData.ts  derive.ts  loadBarrier.ts  registry.ts  types.ts  useAsync.ts
src/lib/: ai.ts  api.ts  auth.ts  authStore.ts  backup.ts  browserDb.ts  cache.ts  calendars.ts  debugLog.ts  demo.ts  format.ts  httpFetch.ts  i18n.ts  ics.ts  images.ts  kdf.ts  notifications.ts  openaiTts.ts  platform.ts  recoveryLink.ts  recurrence.ts  rss.ts  secrets.ts  settings.ts  stocks.ts  theme.ts  vault.ts  voice.ts  weather.ts
src/lib/caldav/: client.ts  discovery.ts  events.ts  ical.ts
src/lib/mail/: client.ts  index.ts  mailbox.ts  mime.ts  types.ts
src/locales/en/: app.json
src/locales/zh-TW/: app.json
src/views/: AssistantView.tsx  AuthView.tsx  CalendarView.tsx  NotesView.tsx  PeopleView.tsx  RecoveryView.tsx  RemindersView.tsx  SearchView.tsx  SettingsView.tsx  TodayView.tsx  TodosView.tsx
worker/: .dev.vars.example  README.md  package.json  tsconfig.json  wrangler.toml
worker/migrations/: 0001_init.sql  0002_auth_throttle.sql  0003_image_blob_key.sql  0004_account_recovery.sql  0005_uuid_legacy_list_ids.sql  0006_space_settings.sql  0007_quota.sql
worker/scripts/: loadcheck.mjs
worker/src/: authorize.ts  env.ts  http.ts  imap.ts  index.ts  rateLimit.ts
worker/src/auth/: crypto.ts  email.ts  throttle.ts  tokens.ts  turnstile.ts
worker/src/db/: account.ts  backup.ts  events.ts  images.ts  lists.ts  notes.ts  onboarding.ts  people.ts  quota.ts  recovery.ts  relations.ts  reminders.ts  settings.ts  todos.ts  users.ts
worker/src/middleware/: auth.ts  cors.ts  securityHeaders.ts
worker/src/routes/: auth.ts  dav.ts  feed.ts  health.ts  mail.ts  quotes.ts  spaces.ts
