[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IMAP for the desktop mail path (src/mail.rs). The only networking crates in
# this app: IMAP is a stateful TCP protocol, so `tauri-plugin-http` cannot carry
# it and the webview cannot open a socket.
#
# `native-tls` rather than rustls because it uses the platform's own trust store
# — Security.framework on macOS, schannel on Windows — so there is no CA bundle
# to ship or keep current, and the certificate iCloud presents is validated
# against exactly the roots the rest of the machine already trusts.
tokio = { version = "1", features = ["net", "io-util", "time"] }
native-tls = "0.2"
tokio-native-tls = "0.3"

# E2E testing only. Opt-in feature rather than `debug_assertions`, because these
# embed a WebDriver server that listens on a local port — with a debug gate,
# `npm run tauri dev` would run one during ordinary development. Nothing here is
# compiled unless the feature is named explicitly (see `npm run test:e2e`).
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[features]
wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[[bin]]
# `tauri dev` runs `target/debug/<bin>` directly — no `.app`, no Info.plist — so
# macOS labels the Dock and menu bar with this filename. (The bundled build gets
# "Sekunda" from `productName` instead.) A space here is not an option:
# cargo accepts it, then rustc rejects `invalid character ' ' in crate name`.
name = "second-brain"
path = "src/main.rs"

